# longest-word

./: .gcloudignore  .gitignore  app.yaml  game.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: .python-ci.yml
static/: style.css
templates/: check.html  home.html
tests/: test_game.py
