[project]
name = "longest-word"
version = "0.1.0"
description = ""
authors = [
    {name = "skier921",email = "reedg921@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.1,<4.0.0)"
]

[tool.poetry]
packages = [{include = "longest_word", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pylint = "^3.3.7"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
